# chiketto

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/chiketto/: __init__.py  cli.py  jira.py  parser.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py
tests/assets/: CHIK-1.json  CHIK-2.json
tests/features/: cli.feature
tests/step_defs/: __init__.py  test_cli.py
tests/unit/: test_client.py  test_parser.py
