[tool.poetry]
name = "chiketto"
version = "0.1.0"
description = "A tool for generating Kanban metrics from Jira"
authors = ["Alex Garrett <ljagged@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ljagged/chiketto"
repository = "https://github.com/chiketto/hypermodern-python"
keywords = ["chiketto", "jira", "kanban", "metrics", "data visualization"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
click = "^7.1.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.1"
ipython = "^7.23.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chiketto = "chiketto.cli:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["chiketto"]

[tool.coverage.report]
show_missing = true
fail_under = 100