[tool.poetry]
name = "chiketto"
version = "0.1.0"
description = "A tool for generating Kanban metrics from Jira"
authors = ["Alex Garrett <ljagged@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ljagged/chiketto"
repository = "https://github.com/chiketto/hypermodern-python"
keywords = ["chiketto", "jira", "kanban", "metrics", "data visualization"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
click = "^8.0"
toml = "^0.10.2"
desert = "^2020.11.18"
marshmallow = "^3.12.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.1"
ipython = "^7.23.1"
mypy = "^0.812"
codecov = "^2.1.11"
pip = "20.2.4"
black = {version = "^21.5b1", allow-prereleases = true}
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
pytype = {version = "^2021.5.6", python = "3.7"}
nox = "^2020.12.31"
typeguard = "^2.12.0"
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
Sphinx = "^4.0.1"
pytest-bdd = "^4.0.2"
isort = "^5.8.0"
sphinx-autodoc-typehints = "^1.12.0"
ipdb = "^0.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chiketto = "chiketto.cli:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["chiketto"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
